--- a/ios17.html
+++ b/ios17.html
@@ -93,6 +93,7 @@ HEADER
     </div>
     <!-- End Header -->
 
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7966070414985050" crossorigin="anonymous"></script>
     <!--------------------------------------
 MAIN
 --------------------------------------->
