subscribe section is removed

--- a/ios17.html
+++ b/ios17.html
@@ -216,7 +216,7 @@ MAIN
                         new privacy features, such as App Privacy Report and Mail Privacy Protection. These features help you to control how your data is used by apps and websites.</p>
 
                 </article>
-                <div class="border p-5 bg-lightblue">
+                <!-- <div class="border p-5 bg-lightblue">
                     <div class="row justify-content-between">
                         <div class="col-md-5 mb-2 mb-md-0">
                             <h5 class="font-weight-bold secondfont">Become a member</h5>
@@ -233,7 +233,7 @@ MAIN
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
