ios17 features blog done

--- a/ios17-features.html
+++ b/ios17-features.html
@@ -79,8 +79,8 @@ HEADER
                             From a new Standby mode that helps to extend your battery life to a Live transcription feature that transcribes audio into text in real time, iOS 17 has something for everyone.
                         </p>
                         <div class="d-flex align-items-center">
-                            <img class="rounded-circle" src="assets/img/IOS17.jpg" width="70">
-                            <small class="ml-2">Sanjay <span class="text-muted d-block">A few hours ago &middot; 2 min. read</span>
+                            <img class="rounded-circle" src="assets/img/dummy-user-profile-pic.jpg" width="70">
+                            <small class="ml-2">Sanjay <span class="text-muted d-block">10 August 2023 &middot; 5 min. read</span>
 						</small>
                         </div>
                     </div>
@@ -215,6 +215,34 @@ MAIN
                     <p> <b> Improved keyboard: </b> The keyboard in iOS 17 has been improved with new features like haptic feedback and predictive text. This makes it easier to type quickly and accurately. More privacy features: iOS 17 includes a number of
                         new privacy features, such as App Privacy Report and Mail Privacy Protection. These features help you to control how your data is used by apps and websites.</p>
 
+                    <ul>
+
+                        <li><b>QuickType:</b> QuickType is a new feature that suggests words as you type. It uses on-device machine learning to learn your typing habits and word choices, so it can get better at predicting what you want to say over time.
+
+                            <img src="./assets/img/ios17blog/ios17-quick-type.jpg" width="60%" height="60%" />
+                        </li>
+
+                        <li><b>Live Text: </b> Live Text is a new feature that lets you copy and paste text from images. Simply tap and hold on a word in an image and the keyboard will display the text in a box. You can then copy and paste the text into another
+                            app. Live Text feature in iOS 17 keyboard
+                            <img src="./assets/img/ios17blog/ios17-live-text.webp" width="60%" height="60%" />
+                        </li>
+
+                        <li><b>Stickers as Emoji: </b> Emoji and stickers are now merged into a single keyboard, so you can easily switch between them. This makes it even easier to add a touch of personality to your messages.
+                            <img src="./assets/img/ios17blog/ios17-sticker-emoji.jpg" width="60%" height="60%" />
+                        </li>
+
+
+                        <li><b>Improved autocorrect: </b> Autocorrect has been improved to be more accurate and less annoying. It's now less likely to correct words that you actually meant to type, and it's more likely to correct typos.
+                            <img src="./assets/img/ios17blog/ios17-improved-autocorrect.webp" width="60%" height="60%" />
+                        </li>
+
+                        <li><b>New keyboard layouts: </b>iOS 17 adds new keyboard layouts for a number of different languages, including Hindi, Bengali, and Thai.
+                            <img src="./assets/img/ios17blog/ios17-new-keyboard-layout.jpg" width="60%" height="60%" />
+                        </li>
+
+
+                    </ul>
+
                 </article>
                 <!-- <div class="border p-5 bg-lightblue">
                     <div class="row justify-content-between">
@@ -318,7 +346,7 @@ FOOTER
         <footer class="bg-white border-top p-3 text-muted small">
             <div class="row align-items-center justify-content-between">
                 <div>
-                    <span class="navbar-brand mr-2"><strong>Mundana</strong></span> Copyright &copy;
+                    <span class="navbar-brand mr-2"><strong>LogicBolts</strong></span> Copyright &copy;
                     <script>
                         document.write(new Date().getFullYear())
                     </script>
