--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ HEADER
                         <h1 class="secondfont mb-3 font-weight-bold">IOS 17 is here, and it's packed with new features to make your iPhone even more powerful and versatile.</h1>
                         <p class="mb-3">
                             From a new Standby mode that helps to extend your battery life to a Live transcription feature that transcribes audio into text in real time, iOS 17 has something for everyone. </p>
-                        <a href="./ios17.html" class="btn btn-dark">Read More</a>
+                        <a href="./ios17-features.html" class="btn btn-dark">Read More</a>
                     </div>
                     <div class="col-md-6 d-none d-md-block pr-0" style="background-size:cover;background-image:url(./assets/img/demo/home.jpg);"> </div>
                 </div>
