images converted to webp

--- a/ios17-features.html
+++ b/ios17-features.html
@@ -71,9 +71,7 @@ HEADER
             <div class="h-100 tofront">
                 <div class="row justify-content-between">
                     <div class="col-md-6 pt-6 pb-6 pr-6 align-self-center">
-                        <p class="text-uppercase font-weight-bold">
-                            <a class="text-danger" href="./category.html">Stories</a>
-                        </p>
+
                         <h1 class="display-4 secondfont mb-3 font-weight-bold">iOS 17 is here, and it's packed with new features to make your iPhone even more powerful and versatile.</h1>
                         <p class="mb-3">
                             From a new Standby mode that helps to extend your battery life to a Live transcription feature that transcribes audio into text in real time, iOS 17 has something for everyone.
@@ -85,7 +83,7 @@ HEADER
                         </div>
                     </div>
                     <div class="col-md-6 pr-0">
-                        <img src="./assets/img/IOS17.jpg">
+                        <img src="./assets/img/IOS17.webp">
                     </div>
                 </div>
             </div>
@@ -134,6 +132,7 @@ MAIN
                     <p>When your iPhone is in Standby mode, you can still see the time, date, and notifications. You can also interact with your iPhone by swiping up from the bottom of the screen to see your widgets. If you receive a notification, you can
                         tap on it to view it or reply to it.</p>
 
+                    <hr>
 
                     <p><b>Live transcription: </b> Live transcription is a new feature in iOS 17 that uses artificial intelligence to transcribe audio into text in real time. This can be helpful for taking notes, following along in meetings, or understanding
                         lectures.
@@ -165,6 +164,8 @@ MAIN
                     </ul>
 
                     </p>
+
+                    <hr>
 
                     <P><b>New stickers: </b> iOS 17 comes with a number of new stickers, including Live Stickers, Memoji stickers, and emoji stickers. You can use these stickers to personalize your messages and make them more fun. </P>
 
@@ -212,6 +213,8 @@ MAIN
 
                     <p>The new stickers and features in iOS 17 make it even more fun and expressive to use the Messages app. So get creative and start using your stickers to show your personality and connect with your friends and family in new ways.</p>
 
+                    <hr>
+
                     <p> <b> Improved keyboard: </b> The keyboard in iOS 17 has been improved with new features like haptic feedback and predictive text. This makes it easier to type quickly and accurately. More privacy features: iOS 17 includes a number of
                         new privacy features, such as App Privacy Report and Mail Privacy Protection. These features help you to control how your data is used by apps and websites.</p>
 
@@ -228,7 +231,7 @@ MAIN
                         </li>
 
                         <li><b>Stickers as Emoji: </b> Emoji and stickers are now merged into a single keyboard, so you can easily switch between them. This makes it even easier to add a touch of personality to your messages.
-                            <img src="./assets/img/ios17blog/ios17-sticker-emoji.jpg" width="60%" height="60%" />
+                            <img src="./assets/img/ios17blog/ios17-sticker-emoji.webp" width="60%" height="60%" />
                         </li>
 
 
