user logo updated

--- a/ios17-features.html
+++ b/ios17-features.html
@@ -77,7 +77,7 @@ HEADER
                             From a new Standby mode that helps to extend your battery life to a Live transcription feature that transcribes audio into text in real time, iOS 17 has something for everyone.
                         </p>
                         <div class="d-flex align-items-center">
-                            <img class="rounded-circle" src="assets/img/dummy-user-profile-pic.jpg" width="70">
+                            <img class="rounded-circle" src="https://upload.wikimedia.org/wikipedia/commons/9/96/IOS_17_logo.png" width="70">
                             <small class="ml-2">Sanjay <span class="text-muted d-block">10 August 2023 &middot; 5 min. read</span>
 						</small>
                         </div>
