--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <!-- Main CSS -->
     <link href="./assets/css/main.css" rel="stylesheet" />
+    <meta name="google-site-verification" content="BmL_ZF5jbU0arPaoODbQihliailZx7HXpCxnmEsEqMw" />
 </head>
 
 <body>
