new blog added quantum computing

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@ NAVBAR
 --------------------------------------->
     <nav class="topnav navbar navbar-expand-lg navbar-light bg-white fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="./index.html"><strong>Mundana</strong></a>
+            <a class="navbar-brand" href="./index.html"><strong>Blogs</strong></a>
             <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
 	<span class="navbar-toggler-icon"></span>
 	</button>
-            <div class="navbar-collapse collapse" id="navbarColor02" style="">
+            <!-- <div class="navbar-collapse collapse" id="navbarColor02" >
                 <ul class="navbar-nav mr-auto d-flex align-items-center">
                     <li class="nav-item">
                         <a class="nav-link" href="./index.html">Intro <span class="sr-only">(current)</span></a>
@@ -59,7 +59,7 @@ NAVBAR
                         <a class="nav-link" href="https://www.wowthemes.net/mundana-free-html-bootstrap-template/">Get this Theme</a>
                     </li>
                 </ul>
-            </div>
+            </div> -->
         </div>
     </nav>
     <!-- End Navbar -->
@@ -73,12 +73,14 @@ HEADER
             <div class="pl-4 pr-0 h-100 tofront">
                 <div class="row justify-content-between">
                     <div class="col-md-6 pt-6 pb-6 align-self-center">
-                        <h1 class="secondfont mb-3 font-weight-bold">IOS 17 is here, and it's packed with new features to make your iPhone even more powerful and versatile.</h1>
+                        <h1 class="secondfont mb-3 font-weight-bold">Quantum Computing: Unleashing the Power of the Quantum World</h1>
                         <p class="mb-3">
-                            From a new Standby mode that helps to extend your battery life to a Live transcription feature that transcribes audio into text in real time, iOS 17 has something for everyone. </p>
-                        <a href="./ios17-features.html" class="btn btn-dark">Read More</a>
+                            Quantum computing, a revolutionary frontier in technology, promises to reshape the very foundations of computation. Traditional computers use bits to process information as 0s and 1s, but quantum computers utilize quantum bits or qubits. These qubits
+                            can exist in multiple states simultaneously due to a property called superposition...
+                        </p>
+                        <a href="./what-is-quantum-computing.html" class="btn btn-dark">Read More</a>
                     </div>
-                    <div class="col-md-6 d-none d-md-block pr-0" style="background-size:cover;background-image:url(./assets/img/demo/home.jpg);"> </div>
+                    <div class="col-md-6 d-none d-md-block pr-0" style="background-size:cover;background-image:url(./assets/img/quantum-computing/quantum-computer-square.webp);"> </div>
                 </div>
             </div>
         </div>
@@ -94,22 +96,21 @@ MAIN
         <div class="row">
             <div class="col-lg-6">
                 <div class="card border-0 mb-4 box-shadow h-xl-300">
-                    <div style="background-image: url(./assets/img/demo/1.jpg); height: 150px;    background-size: cover;    background-repeat: no-repeat;"></div>
+                    <div style="background-image: url(./assets/img/ios17blog/ios17-heading.webp); height: 200px;    background-size: contain;    background-repeat: no-repeat;"></div>
                     <div class="card-body px-0 pb-0 d-flex flex-column align-items-start">
                         <h2 class="h4 font-weight-bold">
-                            <a class="text-dark" href="./article.html">Brain Stimulation Relieves Depression Symptoms</a>
+                            <a class="text-dark" href="./ios17-features.html">IOS 17 is here, and it's packed with new features to make your iPhone even more powerful and versatile.</a>
                         </h2>
                         <p class="card-text">
-                            Researchers have found an effective target in the brain for electrical stimulation to improve mood in people suffering from depression.
-                        </p>
+                            From a new Standby mode that helps to extend your battery life... </p>
                         <div>
-                            <small class="d-block"><a class="text-muted" href="./author.html">Favid Rick</a></small>
-                            <small class="text-muted">Dec 12 &middot; 5 min read</small>
+                            <small class="d-block"><a class="text-muted" href="./ios17-features.html">Sanjay</a></small>
+                            <small class="text-muted">10 August 2023 &middot; 5 min read</small>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-6">
+            <!-- <div class="col-lg-6">
                 <div class="flex-md-row mb-4 box-shadow h-xl-300">
                     <div class="mb-3 d-flex align-items-center">
                         <img height="80" src="./assets/img/demo/blog4.jpg">
@@ -148,7 +149,7 @@ MAIN
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
 
@@ -159,50 +160,37 @@ MAIN
                 <div class="mb-3 d-flex justify-content-between">
                     <div class="pr-3">
                         <h2 class="mb-1 h4 font-weight-bold">
-                            <a class="text-dark" href="./article.html">Nearly 200 Great Barrier Reef coral species also live in the deep sea</a>
+                            <a class="text-dark" href="./what-is-quantum-computing.html">Quantum Computing: Unleashing the Power of the Quantum World
+
+                            </a>
                         </h2>
                         <p>
-                            There are more coral species lurking in the deep ocean that previously thought.
+                            Quantum computing, a revolutionary frontier in technology, promises to reshape the very foundations of computation.
                         </p>
                         <div class="card-text text-muted small">
-                            Jake Bittle in SCIENCE
+                            Sanjay
                         </div>
-                        <small class="text-muted">Dec 12 &middot; 5 min read</small>
+                        <small class="text-muted">Aug 14 &middot; 30 min read</small>
                     </div>
-                    <img height="120" src="./assets/img/demo/blog8.jpg">
+                    <img height="120" src="./assets/img/quantum-computing/quantum-computer-square.webp">
                 </div>
                 <div class="mb-3 d-flex justify-content-between">
                     <div class="pr-3">
                         <h2 class="mb-1 h4 font-weight-bold">
-                            <a class="text-dark" href="./article.html">East Antarctica's glaciers are stirring</a>
+                            <a class="text-dark" href="./ios17-features.html">IOS 17 is here, and it's packed with new features to make your iPhone even more powerful and versatile.</a>
                         </h2>
                         <p>
-                            Nasa says it has detected the first signs of significant melting in a swathe of glaciers in East Antarctica.
-                        </p>
+                            From a new Standby mode that helps to extend your battery life to a Live transcription feature that transcribes audio into text in real time, iOS 17 has something for everyone. </p>
                         <div class="card-text text-muted small">
-                            Jake Bittle in SCIENCE
+                            Sanjay
                         </div>
-                        <small class="text-muted">Dec 12 &middot; 5 min read</small>
+                        <small class="text-muted">10 Aug &middot; 5 min read</small>
                     </div>
-                    <img height="120" src="./assets/img/demo/1.jpg">
+                    <img height="120" src="./assets/img/ios17blog/ios17-square.webp">
                 </div>
-                <div class="mb-3 d-flex justify-content-between">
-                    <div class="pr-3">
-                        <h2 class="mb-1 h4 font-weight-bold">
-                            <a class="text-dark" href="./article.html">50 years ago, armadillos hinted that DNA wasn’t destiny</a>
-                        </h2>
-                        <p>
-                            Nasa says it has detected the first signs of significant melting in a swathe of glaciers in East Antarctica.
-                        </p>
-                        <div class="card-text text-muted small">
-                            Jake Bittle in SCIENCE
-                        </div>
-                        <small class="text-muted">Dec 12 &middot; 5 min read</small>
-                    </div>
-                    <img height="120" src="./assets/img/demo/5.jpg">
-                </div>
+
             </div>
-            <div class="col-md-4 pl-4">
+            <!-- <div class="col-md-4 pl-4">
                 <h5 class="font-weight-bold spanborder"><span>Popular</span></h5>
                 <ol class="list-featured">
                     <li>
@@ -246,7 +234,7 @@ MAIN
 				</span>
                     </li>
                 </ol>
-            </div>
+            </div> -->
         </div>
     </div>
 
@@ -257,7 +245,7 @@ FOOTER
         <footer class="bg-white border-top p-3 text-muted small">
             <div class="row align-items-center justify-content-between">
                 <div>
-                    <span class="navbar-brand mr-2"><strong>Mundana</strong></span> Copyright &copy;
+                    <span class="navbar-brand mr-2"><strong>LogicBolts</strong></span> Copyright &copy;
                     <script>
                         document.write(new Date().getFullYear())
                     </script>
