--- a/ios17-features.html
+++ b/ios17-features.html
@@ -78,13 +78,13 @@ HEADER
                             From a new Standby mode that helps to extend your battery life to a Live transcription feature that transcribes audio into text in real time, iOS 17 has something for everyone.
                         </p>
                         <div class="d-flex align-items-center">
-                            <img class="rounded-circle" src="https://upload.wikimedia.org/wikipedia/commons/9/96/IOS_17_logo.png" width="70">
+                            <img class="rounded-circle" src="./assets/img/ios17blog/ios17-square.webp" width="70">
                             <small class="ml-2">Sanjay <span class="text-muted d-block">10 August 2023 &middot; 5 min. read</span>
 						</small>
                         </div>
                     </div>
                     <div class="col-md-6 pr-0">
-                        <img src="./assets/img/IOS17.webp">
+                        <img src="./assets/img/ios17blog/IOS17.webp">
                     </div>
                 </div>
             </div>
