author name updated

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ MAIN
                         <p class="card-text">
                             From a new Standby mode that helps to extend your battery life... </p>
                         <div>
-                            <small class="d-block"><a class="text-muted" href="./ios17-features.html">Sanjay</a></small>
+                            <small class="d-block"><a class="text-muted" href="./ios17-features.html">LogicBolts</a></small>
                             <small class="text-muted">10 August 2023 &middot; 5 min read</small>
                         </div>
                     </div>
@@ -168,7 +168,7 @@ MAIN
                             Quantum computing, a revolutionary frontier in technology, promises to reshape the very foundations of computation.
                         </p>
                         <div class="card-text text-muted small">
-                            Sanjay
+                            LogicBolts
                         </div>
                         <small class="text-muted">Aug 14 &middot; 30 min read</small>
                     </div>
@@ -182,7 +182,7 @@ MAIN
                         <p>
                             From a new Standby mode that helps to extend your battery life to a Live transcription feature that transcribes audio into text in real time, iOS 17 has something for everyone. </p>
                         <div class="card-text text-muted small">
-                            Sanjay
+                            LogicBolts
                         </div>
                         <small class="text-muted">10 Aug &middot; 5 min read</small>
                     </div>
