--- a/ios17-features.html
+++ b/ios17-features.html
@@ -79,7 +79,7 @@ HEADER
                         </p>
                         <div class="d-flex align-items-center">
                             <img class="rounded-circle" src="./assets/img/ios17blog/iphone-ios17-square.webp" width="70">
-                            <small class="ml-2">Sanjay <span class="text-muted d-block">10 August 2023 &middot; 5 min. read</span>
+                            <small class="ml-2">LogicBolts <span class="text-muted d-block">10 August 2023 &middot; 5 min. read</span>
 						</small>
                         </div>
                     </div>
