new blog added for lunar-25 crash

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <!-- Main CSS -->
     <link href="./assets/css/main.css" rel="stylesheet" />
     <meta name="google-site-verification" content="BmL_ZF5jbU0arPaoODbQihliailZx7HXpCxnmEsEqMw" />
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7966070414985050" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
@@ -73,14 +75,13 @@ HEADER
             <div class="pl-4 pr-0 h-100 tofront">
                 <div class="row justify-content-between">
                     <div class="col-md-6 pt-6 pb-6 align-self-center">
-                        <h1 class="secondfont mb-3 font-weight-bold">Quantum Computing: Unleashing the Power of the Quantum World</h1>
+                        <h1 class="secondfont mb-3 font-weight-bold">Russia's Lunar 25 Lander Crashes During Landing Attempt</h1>
                         <p class="mb-3">
-                            Quantum computing, a revolutionary frontier in technology, promises to reshape the very foundations of computation. Traditional computers use bits to process information as 0s and 1s, but quantum computers utilize quantum bits or qubits. These qubits
-                            can exist in multiple states simultaneously due to a property called superposition...
+                            Russia's Luna 25 lander crashed during a landing attempt on the Moon on Tuesday, August 22, 2023. The lander was carrying a number of scientific instruments, including a drill that was supposed to collect samples from the lunar surface.
                         </p>
-                        <a href="./what-is-quantum-computing.html" class="btn btn-dark">Read More</a>
+                        <a href="./russia-lunar-25.html" class="btn btn-dark">Read More</a>
                     </div>
-                    <div class="col-md-6 d-none d-md-block pr-0" style="background-size:cover;background-image:url(./assets/img/quantum-computing/quantum-computer-square.webp);"> </div>
+                    <div class="col-md-6 d-none d-md-block pr-0" style="background-size:cover;background-image:url(./assets/img/lunar-25-crash/lunar-25-crash-square.webp);"> </div>
                 </div>
             </div>
         </div>
@@ -94,23 +95,23 @@ MAIN
 
     <div class="container pt-4 pb-4">
         <div class="row">
+
             <div class="col-lg-6">
                 <div class="card border-0 mb-4 box-shadow h-xl-300">
-                    <div style="background-image: url(./assets/img/ios17blog/ios17-heading.webp); height: 200px;    background-size: contain;    background-repeat: no-repeat;"></div>
+                    <div style="background-image: url(./assets/img/quantum-computing/quantum-computer-history-widescreen.webp); height: 200px;    background-size: cover;    background-repeat: no-repeat;"></div>
                     <div class="card-body px-0 pb-0 d-flex flex-column align-items-start">
                         <h2 class="h4 font-weight-bold">
-                            <a class="text-dark" href="./ios17-features.html">IOS 17 is here, and it's packed with new features to make your iPhone even more powerful and versatile.</a>
+                            <a class="text-dark" href="./what-is-quantum-computing.html">Quantum Computing: Unleashing the Power of the Quantum World</a>
                         </h2>
                         <p class="card-text">
-                            From a new Standby mode that helps to extend your battery life... </p>
-                        <div>
+                            Quantum computing, a revolutionary frontier in technology, promises to reshape the very foundations of computation...
                             <small class="d-block"><a class="text-muted" href="./ios17-features.html">LogicBolts</a></small>
-                            <small class="text-muted">10 August 2023 &middot; 5 min read</small>
-                        </div>
+                            <small class="text-muted">Aug 14 &middot; 30 min read</small>
                     </div>
                 </div>
             </div>
-            <!-- <div class="col-lg-6">
+        </div>
+        <!-- <div class="col-lg-6">
                 <div class="flex-md-row mb-4 box-shadow h-xl-300">
                     <div class="mb-3 d-flex align-items-center">
                         <img height="80" src="./assets/img/demo/blog4.jpg">
@@ -150,13 +151,32 @@ MAIN
                     </div>
                 </div>
             </div> -->
-        </div>
+    </div>
     </div>
 
     <div class="container">
         <div class="row justify-content-between">
             <div class="col-md-8">
                 <h5 class="font-weight-bold spanborder"><span>All Stories</span></h5>
+
+                <div class="mb-3 d-flex justify-content-between">
+                    <div class="pr-3">
+                        <h2 class="mb-1 h4 font-weight-bold">
+                            <a class="text-dark" href="./russia-lunar-25.html">Russia's Lunar 25 Lander Crashes During Landing Attempt
+
+                            </a>
+                        </h2>
+                        <p>
+                            The Luna 25 lander was launched on August 10, 2023, from the Vostochny Cosmodrome in Russia.
+                        </p>
+                        <div class="card-text text-muted small">
+                            LogicBolts
+                        </div>
+                        <small class="text-muted">22 August 2023 &middot; 3 min read</small>
+                    </div>
+                    <img height="120" src="./assets/img/lunar-25-crash/lunar-25-crash-square.webp">
+                </div>
+
                 <div class="mb-3 d-flex justify-content-between">
                     <div class="pr-3">
                         <h2 class="mb-1 h4 font-weight-bold">
@@ -266,7 +286,6 @@ JAVASCRIPTS
     <script src="./assets/js/vendor/popper.min.js" type="text/javascript"></script>
     <script src="./assets/js/vendor/bootstrap.min.js" type="text/javascript"></script>
     <script src="./assets/js/functions.js" type="text/javascript"></script>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7966070414985050" crossorigin="anonymous"></script>
 
 </body>
 
