new blog added on period pain

--- a/index.html
+++ b/index.html
@@ -162,6 +162,25 @@ MAIN
                 <div class="mb-3 d-flex justify-content-between">
                     <div class="pr-3">
                         <h2 class="mb-1 h4 font-weight-bold">
+                            <a class="text-dark" href="./period-pain-relief.html">Top best food and fruits to reduce period pain.
+
+                            </a>
+                        </h2>
+                        <p>
+                            Certain foods and fruits may have anti-inflammatory properties and nutrients that could potentially help reduce period pain. While there isn't a one-size-fits-all solution, incorporating these foods into your diet might offer some relief. Keep in mind
+                            that individual responses can vary, and it's always a good idea to consult with a healthcare professional for personalized advice. </p>
+                        </p>
+                        <div class="card-text text-muted small">
+                            LogicBolts
+                        </div>
+                        <small class="text-muted">>23 August 2023 &middot; 3 min read</small>
+                    </div>
+                    <img height="120" src="./assets/img/period-pain/period-pain-square.webp">
+                </div>
+
+                <div class="mb-3 d-flex justify-content-between">
+                    <div class="pr-3">
+                        <h2 class="mb-1 h4 font-weight-bold">
                             <a class="text-dark" href="./russia-lunar-25.html">Russia's Lunar 25 Lander Crashes During Landing Attempt
 
                             </a>
@@ -194,6 +213,7 @@ MAIN
                     </div>
                     <img height="120" src="./assets/img/quantum-computing/quantum-computer-square.webp">
                 </div>
+
                 <div class="mb-3 d-flex justify-content-between">
                     <div class="pr-3">
                         <h2 class="mb-1 h4 font-weight-bold">
