some gif files added

--- a/period-pain-relief.html
+++ b/period-pain-relief.html
@@ -16,6 +16,14 @@
     <link href="./assets/css/main.css" rel="stylesheet" />
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7966070414985050" crossorigin="anonymous"></script>
 
+    <style>
+        .centerImg {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+    </style>
+
 </head>
 
 <body>
@@ -82,7 +90,7 @@ HEADER
                             that individual responses can vary, and it's always a good idea to consult with a healthcare professional for personalized advice. </p>
                         <div class="d-flex align-items-center">
                             <img class="rounded-circle" src="assets/img/period-pain/period-pain-square.webp" width="70">
-                            <small class="ml-2">LogicBolts <span class="text-muted d-block">22 August 2023 &middot; 3 min. read</span>
+                            <small class="ml-2">LogicBolts <span class="text-muted d-block">23 August 2023 &middot; 3 min. read</span>
 						</small>
                         </div>
                     </div>
@@ -126,6 +134,9 @@ MAIN
 
                     </p>
 
+                    <div class="centerImg">
+                        <img src="http://www.reactiongifs.com/r/apthy.gif" />
+                    </div>
                     <ol>
                         <li><b>Ginger: </b> Ginger has natural anti-inflammatory properties and may help reduce menstrual pain. You can consume it as ginger tea, add it to meals, or use it in smoothies.</li>
 
@@ -152,6 +163,10 @@ MAIN
                         <li><b>Watermelon: </b> Watermelon contains high water content, which can help with hydration and potentially reduce bloating.</li>
 
                     </ol>
+
+                    <div class="centerImg">
+                        <img src="http://www.reactiongifs.com/r/wow.gif" />
+                    </div>
                     <p>Remember that individual preferences and tolerances vary, so it's important to listen to your body and make adjustments based on what works best for you. Additionally, staying hydrated and maintaining a balanced diet overall can contribute
                         to better menstrual health. If your period pain is severe or persistent, it's recommended to consult a healthcare professional for a proper diagnosis and treatment plan.
                         <p>
