removed period pain blog

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ MAIN
             <div class="col-md-8">
                 <h5 class="font-weight-bold spanborder"><span>All Stories</span></h5>
 
-                <div class="mb-3 d-flex justify-content-between">
+                <!-- <div class="mb-3 d-flex justify-content-between">
                     <div class="pr-3">
                         <h2 class="mb-1 h4 font-weight-bold">
                             <a class="text-dark" href="./period-pain-relief.html">Top best food and fruits to reduce period pain.
@@ -176,7 +176,7 @@ MAIN
                         <small class="text-muted">>23 August 2023 &middot; 3 min read</small>
                     </div>
                     <img height="120" src="./assets/img/period-pain/period-pain-square.webp">
-                </div>
+                </div> -->
 
                 <div class="mb-3 d-flex justify-content-between">
                     <div class="pr-3">
